<resources>
    <string name="app_name">PED</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ped">
        <a href="http://www.krishnasastry.me/#/projects/7">PED</a>
    </string>
    <string name="g">Google+</string>
    <string name="f">Facebook</string>
    <string name="t">Twitter</string>
    <string name="y">Youtube</string>
    <string name="followus">"    If you like our project please follow us on "</string>
    <string name="team">" team!"</string>
    <string name="thanku">"   A big thank you on behalf of the "</string>
    <string name="about">"			We developed this application for you to have a personal offline dictionary application in which you can not only search for meanings of different words, but you can also add new words that you come across, update an existing word's meaning if you found a much better one and even delete a word if you feel that it's unnecessary. \n \nThank you for installing our application  :) "</string>
</resources>
